all attribute/property setters in connectedCallback

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,8 @@
 
     }
     </style>
-    <script src="dist/webcomponents/webcomponents-loader.js"></script>
-    <script src="dist/webcomponents/custom-elements-es5-adapter.js"></script>
+    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <script src="node_modules/angular/angular.js"></script>
     <script type="text/javascript">
       var process = process || {env: {NODE_ENV: 'production'}};
