--- a/demo/index.html
+++ b/demo/index.html
@@ -4,17 +4,7 @@
     <meta charset="utf-8">
     <title>s-typeahead</title>
     <link rel="stylesheet" href="demo.css">
-    <style>
-    s-typeahead {
-
-    }
-    </style>
-    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <script src="node_modules/angular/angular.js"></script>
-    <script type="text/javascript">
-      var process = process || {env: {NODE_ENV: 'production'}};
-    </script>
   </head>
   <body ng-controller="MainCtrl">
     <h1>s-typeahead</h1>
@@ -25,6 +15,6 @@
     <h3>Working with Angular</h3>
     <s-typeahead id="{{options.uid}}" options="{{options}}"></s-typeahead>
   </body>
-  <script src="dist/s-typeahead.iife.js" charset="utf-8"></script>
+  <script src="dist/s-typeahead.es.js" type="module"></script>
   <script src="src/demo.js" charset="utf-8"></script>
 </html>
