change file extension to .mjs to avoid uglify issues

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,6 @@
     <h3>Working with Angular</h3>
     <s-typeahead id="{{options.uid}}" options="{{options}}"></s-typeahead>
   </body>
-  <script src="dist/s-typeahead.es.js" type="module"></script>
+  <script src="dist/s-typeahead.mjs" type="module"></script>
   <script src="src/demo.js" charset="utf-8"></script>
 </html>
