remove engine from package.json so installs work with yarn

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,5 +16,5 @@
     <s-typeahead id="{{options.uid}}" options="{{options}}"></s-typeahead>
   </body>
   <script src="src/s-typeahead.js" type="module"></script>
-  <script src="src/demo.js" charset="utf-8"></script>
+  <script src="src/demo.js" type="module"></script>
 </html>
