--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,6 @@
     <h3>Working with Angular</h3>
     <s-typeahead id="{{options.uid}}" options="{{options}}"></s-typeahead>
   </body>
-  <script src="src/s-typeahead.js" type="module"></script>
+  <script src="/dist/s-typeahead.test.mjs" type="module"></script>
   <script src="src/demo.js" type="module"></script>
 </html>
